@@ -178,7 +178,7 @@ int main (int argc, char *argv[])
   CommandLine cmd;
   cmd.AddValue ("transport_prot", "Transport protocol to use: TcpNewReno, "
                 "TcpHybla, TcpHighSpeed, TcpVegas, TcpScalable, TcpVeno, "
-                "TcpWestwood, TcpWestwoodPlus ", transport_prot);
+                "TcpBic, TcpWestwood, TcpWestwoodPlus ", transport_prot);
   cmd.AddValue ("error_p", "Packet error rate", error_p);
   cmd.AddValue ("bandwidth", "Bottleneck bandwidth", bandwidth);
   cmd.AddValue ("delay", "Bottleneck delay", delay);
@@ -248,6 +248,10 @@ int main (int argc, char *argv[])
   else if (transport_prot.compare ("TcpVeno") == 0)
     {
       Config::SetDefault ("ns3::TcpL4Protocol::SocketType", TypeIdValue (TcpVeno::GetTypeId ()));
+    }
+  else if (transport_prot.compare ("TcpBic") == 0)
+    {
+      Config::SetDefault ("ns3::TcpL4Protocol::SocketType", TypeIdValue (TcpBic::GetTypeId ()));
     }
   else if (transport_prot.compare ("TcpWestwood") == 0)
     { // the default protocol type in ns3::TcpWestwood is WESTWOOD
@@ -383,6 +387,7 @@ int main (int argc, char *argv[])
           || transport_prot.compare ("TcpHighSpeed") == 0
           || transport_prot.compare ("TcpVegas") == 0
           || transport_prot.compare ("TcpVeno") == 0
+          || transport_prot.compare ("TcpBic") == 0
           || transport_prot.compare ("TcpScalable") == 0)
         {
           Config::SetDefault ("ns3::TcpSocket::SegmentSize", UintegerValue (tcp_adu_size));
