@@ -152,6 +152,7 @@ def build(bld):
         'model/tcp-westwood.cc',
         'model/tcp-scalable.cc', 
         'model/tcp-veno.cc',
+        'model/tcp-bic.cc',
         'model/tcp-rx-buffer.cc',
         'model/tcp-tx-buffer.cc',
         'model/tcp-option.cc',
@@ -355,6 +356,7 @@ def build(bld):
         'model/tcp-westwood.h',
         'model/tcp-scalable.h',
         'model/tcp-veno.h',
+        'model/tcp-bic.h',
         'model/tcp-socket-base.h',
         'model/tcp-tx-buffer.h',
         'model/tcp-rx-buffer.h',
